Fix Header Spacing

--- a/src/res/css/main.css
+++ b/src/res/css/main.css
@@ -19,7 +19,7 @@ body {
 .nav-link {
     color: #f0f0f0 !important;
     font-size: 1.4rem;
-    margin-right: 1.5rem;
+    margin-right: 5.25rem;
 }
 
 h1 {
